# intive-interstellar-sales-showdown

./: InterstellarChallenge.ipynb  interstellarchallenge-regression.ipynb  interstellarchallenge-regression.py  interstellarchallenge-regression.qmd  original_test.csv  original_train.csv  pyproject.toml  sample_submission.csv  test.csv  train.csv
